--- a/test/index.html
+++ b/test/index.html
@@ -48,13 +48,20 @@
       font-size:16px;
     }
     button {
-      width:100%;
-      padding:12px;
-      border:none;
-      border-radius:6px;
-      font-size:16px;
-      cursor:pointer;
-    }
+  width:100%;
+  min-height:48px;
+  border:none;
+  border-radius:6px;
+  font-size:16px;
+  cursor:pointer;
+
+  display:flex;
+  align-items:center;
+  justify-content:center;
+
+  padding:0;
+  line-height:1;
+}
     .btn-submit {
       background-color:#2b6cb0;
       color:white;
@@ -96,8 +103,7 @@
 
       <button
         onclick="logoutAndClose()"
-        style="margin-top:10px;background:#FF0000;color:#fff;border:none;border-radius:6px;padding:10px;">
-        Zamknij
+        style="margin-top:10px;background:#FF0000;color:#fff;"
       </button>
 
       <div class="log" id="log"></div>
