--- a/test/index.html
+++ b/test/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rejestracja – OREP</title>
+
   <!-- Supabase JS CDN -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
+
     body {
       font-family: Arial, sans-serif;
       background: #000;
@@ -17,6 +20,7 @@
       min-height:100vh;
       padding:20px;
     }
+
     .wrapper{
       display:flex;
       flex-direction:column;
@@ -30,6 +34,7 @@
       width:100%;
       text-align:center;
     }
+
     .form-container{
       width:100%;
       background:#fff;
@@ -38,6 +43,11 @@
       box-shadow:0 2px 10px rgba(0,0,0,0.05);
       border:2px solid blue;
     }
+
+    h2 {
+      margin-bottom:20px; /* ✅ KLUCZOWA POPRAWKA */
+    }
+
     input[type="email"],
     input[type="password"] {
       width:100%;
@@ -47,33 +57,41 @@
       border-radius:6px;
       font-size:16px;
     }
+
     button {
-  width:100%;
-  min-height:48px;
-  border:none;
-  border-radius:6px;
-  font-size:16px;
-  cursor:pointer;
+      width:100%;
+      min-height:48px;
+      border:none;
+      border-radius:6px;
+      font-size:16px;
+      cursor:pointer;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:0;
+      line-height:1;
+    }
 
-  display:flex;
-  align-items:center;
-  justify-content:center;
-
-  padding:0;
-  line-height:1;
-}
     .btn-submit {
       background-color:#2b6cb0;
       color:white;
       font-weight:600;
       margin-bottom:8px;
     }
+
     .btn-secondary {
       background:#fff;
       color:#2b6cb0;
       border:1px solid #2b6cb0;
       margin-bottom:8px;
     }
+
+    .actions {
+      display:flex;
+      flex-direction:column;
+      gap:8px;
+    }
+
     .log {
       margin-top:15px;
       font-size:14px;
@@ -81,13 +99,9 @@
       word-break:break-word;
       min-height:20px;
     }
-    .actions {
-      display:flex;
-      flex-direction: column; /* <<< ZMIANA */
-      gap:8px;
-    }
   </style>
 </head>
+
 <body>
   <div class="wrapper">
     <div class="form-container">
@@ -104,6 +118,8 @@
       <button
         onclick="logoutAndClose()"
         style="margin-top:10px;background:#FF0000;color:#fff;"
+      >
+        Wyloguj i zamknij
       </button>
 
       <div class="log" id="log"></div>
@@ -113,6 +129,7 @@
   <script>
     const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
+
     const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     document.addEventListener('DOMContentLoaded', async () => {
