--- a/test/index.html
+++ b/test/index.html
@@ -45,7 +45,7 @@
     }
 
     h2 {
-      margin-bottom:20px; /* ✅ KLUCZOWA POPRAWKA */
+      margin-bottom:20px;
     }
 
     input[type="email"],
@@ -68,7 +68,6 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      padding:0;
       line-height:1;
     }
 
@@ -84,6 +83,18 @@
       color:#2b6cb0;
       border:1px solid #2b6cb0;
       margin-bottom:8px;
+    }
+
+    .btn-close {
+      background:#2b6cb0;
+      color:#fff;
+      margin-top:10px;
+    }
+
+    .btn-logout {
+      background:#ff0000;
+      color:#fff;
+      margin-top:8px;
     }
 
     .actions {
@@ -115,11 +126,12 @@
         <button class="btn-secondary" id="loginBtn">Zaloguj</button>
       </div>
 
-      <button
-        onclick="logoutAndClose()"
-        style="margin-top:10px;background:#FF0000;color:#fff;"
-      >
-        Wyloguj i zamknij
+      <button class="btn-close" onclick="closeOnly()">
+        Zamknij
+      </button>
+
+      <button class="btn-logout" onclick="logoutOnly()">
+        Wyloguj
       </button>
 
       <div class="log" id="log"></div>
@@ -215,7 +227,12 @@
       };
     });
 
-    async function logoutAndClose() {
+    function closeOnly() {
+      // NIE wylogowuje – sesja zostaje
+      window.location.href = '/';
+    }
+
+    async function logoutOnly() {
       try {
         await sb.auth.signOut();
       } catch (e) {
