--- a/test/index.html
+++ b/test/index.html
@@ -44,7 +44,7 @@
       font-size:22px;
       font-weight:bold;
       cursor:pointer;
-      color:#555;
+      color: #ff0000;
       user-select:none;
     }
 
