--- a/test/index.html
+++ b/test/index.html
@@ -97,8 +97,8 @@
 
     .btn-secondary {
       background:#fff;
-      color:#2b6cb0;
-      border:1px solid #2b6cb0;
+      color:#008000;
+      border:1px solid #008000;
     }
 
     .btn-logout {
