--- a/test/index.html
+++ b/test/index.html
@@ -96,9 +96,9 @@
     }
 
     .btn-secondary {
-      background:#fff;
-      color:#008000;
-      border:1px solid #008000;
+      background:#008000;
+      color:#fff;
+      border:1px solid #fff;
     }
 
     .btn-logout {
