--- a/test/index.html
+++ b/test/index.html
@@ -178,6 +178,7 @@
           passwordInput.classList.add('hidden');
           authActions.classList.add('hidden');
           logoutBtn.classList.remove('hidden');
+          window.location.href = '/rejestracja_formularz';
         }
       } catch (err) {
         console.error(err);
