--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -13,104 +13,116 @@
 
     body {
       font-family: Arial, sans-serif;
-      background: #000000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      padding: 20px;
+      background: #000;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      min-height:100vh;
+      padding:20px;
     }
 
-    .wrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background: #e2e6ea;
-      padding: 40px 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      border: 20px solid white;
-      max-width: 500px;
-      width: 100%;
-      text-align: center;
+    .wrapper{
+      position: relative;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      background:#e2e6ea;
+      padding:40px 20px;
+      border-radius:12px;
+      box-shadow:0 4px 20px rgba(0,0,0,0.1);
+      border:20px solid white;
+      max-width:500px;
+      width:100%;
+      text-align:center;
     }
 
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 25px;
+    /* X w rogu */
+    .close-x {
+      position:absolute;
+      top:8px;
+      right:12px;
+      font-size:22px;
+      font-weight:bold;
+      cursor:pointer;
+      color: #ff0000;
+      user-select:none;
     }
 
-    .header-text .text {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      font-size: 22px;
-      font-weight: 600;
-      line-height: 1.3;
-      gap: 5px;
+    .close-x:hover {
+      color:#000;
     }
 
-    .header-text .black { color: #000; }
-    .header-text .blue { color: #2b6cb0; }
-
-    .intro-text {
-      font-size: 16px;
-      color: #333;
-      margin-bottom: 30px;
-      line-height: 1.5;
+    .form-container{
+      width:100%;
+      background:#fff;
+      padding:25px 20px;
+      border-radius:8px;
+      box-shadow:0 2px 10px rgba(0,0,0,0.05);
+      border:2px solid blue;
     }
 
-    .form-container {
-      width: 100%;
-      background: #fff;
-      padding: 25px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      border: 2px solid blue;
+    h2 {
+      margin-bottom:20px;
     }
 
-    .form-container h2 {
-      margin-bottom: 15px;
-      font-weight: 600;
-      color: #333;
-    }
-
-    input[type="email"] {
-      width: 100%;
-      padding: 12px 15px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 16px;
+    input[type="email"],
+    input[type="password"] {
+      width:100%;
+      padding:12px 15px;
+      margin-bottom:15px;
+      border:1px solid #ccc;
+      border-radius:6px;
+      font-size:16px;
     }
 
     button {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 6px;
-      font-size: 16px;
-      cursor: pointer;
+      width:100%;
+      min-height:48px;
+      border:none;
+      border-radius:6px;
+      font-size:16px;
+      cursor:pointer;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:0;
+      line-height:1;
     }
 
     .btn-submit {
-      background-color: #2b6cb0;
-      color: white;
-      font-weight: 600;
+      background-color:#2b6cb0;
+      color:white;
+      font-weight:600;
     }
 
-    .btn-submit:hover {
-      background-color: #1e4e8c;
+    .btn-secondary {
+      background:#008000;
+      color:#fff;
+      border:1px solid #fff;
+    }
+
+    .btn-logout {
+      background:#ff0000;
+      color:#fff;
+      margin-top:10px;
+    }
+
+    .actions {
+      display:flex;
+      flex-direction:column;
+      gap:8px;
+    }
+
+    .hidden {
+      display:none !important;
     }
 
     .log {
-      margin-top: 15px;
-      font-size: 14px;
-      color: #333;
-      word-break: break-word;
-      min-height: 20px;
+      margin-top:15px;
+      font-size:14px;
+      color:#333;
+      word-break:break-word;
+      min-height:20px;
     }
   </style>
 </head>
@@ -119,87 +131,137 @@
 
   <div class="wrapper">
 
-    <div class="container">
-      <div class="header-text">
-        <div class="text">
-          <span class="black">Ogólnopolski</span>
-          <span class="black">Rejestr</span>
-          <span class="black">Elektryków</span>
-          <span class="blue">w Polsce</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="intro-text">
-    Po zalogowaniu otrzymasz dostęp do formularza rejestracji w bazie danych <em> Auth Elektryków Polskich</em>. <b> Link wyślemy na Twój adres e-mail.</b>
-    </div>
+    <!-- X – tylko zamyka, NIE wylogowuje -->
+    <div class="close-x" onclick="closeOnly()">✕</div>
 
     <div class="form-container">
-      <h2>Logowanie</h2>
-      <input type="email" id="emailInput" placeholder="Twój adres e-mail" />
-      <button class="btn-submit" id="emailBtn">Zaloguj</button>
+      <h2>Logowanie / Rejestracja</h2>
 
-      <!-- ✅ PRZYCISK ZAMKNIJ Z WYLOGOWANIEM -->
-      <button 
-        onclick="logoutAndClose()" 
-        style="margin-top:10px;background:#FF0000;color:#fff;">
-        Zamknij
+      <input type="email" id="emailInput" placeholder="Twój adres e-mail" />
+      <input type="password" id="passwordInput" placeholder="Hasło (min. 8 znaków)" />
+
+      <div class="actions" id="authActions">
+        <button class="btn-submit" id="signupBtn">Zarejestruj</button>
+        <button class="btn-secondary" id="loginBtn">Zaloguj</button>
+      </div>
+
+      <button id="logoutBtn" class="btn-logout hidden">
+        Wyloguj
       </button>
 
       <div class="log" id="log"></div>
     </div>
-
   </div>
 
   <script>
     const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
-
     const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     document.addEventListener('DOMContentLoaded', async () => {
       const emailInput = document.getElementById('emailInput');
-      const emailBtn = document.getElementById('emailBtn');
+      const passwordInput = document.getElementById('passwordInput');
+      const signupBtn = document.getElementById('signupBtn');
+      const loginBtn = document.getElementById('loginBtn');
+      const logoutBtn = document.getElementById('logoutBtn');
+      const authActions = document.getElementById('authActions');
       const log = document.getElementById('log');
 
-      const { data: { user } } = await sb.auth.getUser();
-      if (user) {
-        log.innerText = `✅ Zalogowany jako ${user.email}`;
-        emailInput.disabled = true;
-        emailBtn.disabled = true;
+      // Sprawdzenie, czy użytkownik już jest zalogowany
+      try {
+        const { data } = await sb.auth.getUser();
+        if (data?.user) {
+          window.location.href = '/rejestracja_formularz';
+        }
+      } catch (err) {
+        console.error(err);
       }
 
-      emailBtn.onclick = async () => {
+      // Rejestracja
+      signupBtn.onclick = async () => {
         const email = emailInput.value.trim();
+        const password = passwordInput.value;
+
         if (!email) {
           log.innerText = "❌ Podaj poprawny adres e-mail";
           return;
         }
-
-        log.innerText = "⏳ Trwa wysyłanie...";
-
-        const { error } = await sb.auth.signInWithOtp({
-          email,
-          options: {
-            emailRedirectTo: "https://orep.pl/rejestracja_formularz"
-          }
-        });
-
-        if (error) {
-          log.innerText = "❌ " + error.message;
+        if (!password || password.length < 8) {
+          log.innerText = "❌ Hasło musi mieć minimum 8 znaków";
           return;
         }
 
-        log.innerText = "✅ Sprawdź skrzynkę e-mail";
+        log.innerText = "⏳ Trwa rejestracja...";
+        try {
+          const { data, error } = await sb.auth.signUp({ email, password });
+          if (error) {
+            if (error.message.includes("User already registered")) {
+              log.innerText = "❌ Użytkownik o tym adresie e-mail już istnieje";
+            } else if (error.message.includes("Invalid email")) {
+              log.innerText = "❌ Nieprawidłowy adres e-mail";
+            } else if (error.message.includes("Password should be at least")) {
+              log.innerText = "❌ Hasło musi mieć minimum 8 znaków";
+            } else {
+              log.innerText = "❌ " + error.message;
+            }
+            return;
+          }
+          if (data?.user) {
+            window.location.href = '/rejestracja_formularz';
+          } else {
+            log.innerText = "✅ Rejestracja zakończona. Sprawdź e-mail i potwierdź konto.";
+          }
+        } catch {
+          log.innerText = "❌ Wystąpił błąd podczas rejestracji";
+        }
+      };
+
+      // Logowanie
+      loginBtn.onclick = async () => {
+        const email = emailInput.value.trim();
+        const password = passwordInput.value;
+
+        if (!email) {
+          log.innerText = "❌ Podaj adres e-mail";
+          return;
+        }
+        if (!password) {
+          log.innerText = "❌ Podaj hasło";
+          return;
+        }
+
+        log.innerText = "⏳ Trwa logowanie...";
+        try {
+          const { data, error } = await sb.auth.signInWithPassword({ email, password });
+          if (error) {
+            if (error.message.includes("Invalid login credentials")) {
+              log.innerText = "❌ Nieprawidłowy e-mail lub hasło";
+            } else if (error.message.includes("Email not confirmed")) {
+              log.innerText = "❌ Konto nie zostało jeszcze potwierdzone e-mailem";
+            } else {
+              log.innerText = "❌ " + error.message;
+            }
+            return;
+          }
+          if (data?.user) {
+            window.location.href = '/rejestracja_formularz';
+          }
+        } catch {
+          log.innerText = "❌ Wystąpił błąd podczas logowania";
+        }
+      };
+
+      // Wylogowanie
+      logoutBtn.onclick = async () => {
+        await sb.auth.signOut();
+        window.location.href = '/';
       };
     });
 
-    // Funkcja wylogowania i zamknięcia
-    async function logoutAndClose() {
-      await sb.auth.signOut();
-      window.location.href = '/';
+    // Tylko zamknięcie strony
+    function closeOnly() {
+      window.location.href = "/";
     }
   </script>
-
 </body>
 </html>
